--- a/examples/caa_sycophancy.ipynb
+++ b/examples/caa_sycophancy.ipynb
@@ -66,6 +66,7 @@
    "outputs": [],
    "source": [
     "import huggingface_hub\n",
+    "\n",
     "huggingface_hub.notebook_login()"
    ]
   },
@@ -77,12 +78,11 @@
    "source": [
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "\n",
+    "\n",
     "def get_model_and_tokenizer(model_name: str):\n",
     "    tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "    # Note: you must have installed 'accelerate', 'bitsandbytes' to load in 8bit\n",
-    "    model = AutoModelForCausalLM.from_pretrained(\n",
-    "        model_name, load_in_8bit=True\n",
-    "    )\n",
+    "    model = AutoModelForCausalLM.from_pretrained(model_name, load_in_8bit=True)\n",
     "    return model, tokenizer"
    ]
   },
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_size = \"13b\" # or \"7b\"\n",
+    "model_size = \"13b\"  # or \"7b\"\n",
     "model_name = f\"meta-llama/Llama-2-{model_size}-chat-hf\"\n",
     "model, tokenizer = get_model_and_tokenizer(model_name)"
    ]
@@ -139,8 +139,8 @@
     "# Define a shorthand type for model-written eval datum\n",
     "MWEData = list[dict[str, str]]\n",
     "\n",
-    "train_data: list[MWEData] = json.load(open(\"generate_dataset.json\", 'r'))\n",
-    "test_data: list[MWEData] = json.load(open(\"test_dataset_ab.json\", 'r'))\n",
+    "train_data: list[MWEData] = json.load(open(\"generate_dataset.json\"))\n",
+    "test_data: list[MWEData] = json.load(open(\"test_dataset_ab.json\"))\n",
     "\n",
     "random.seed(42)\n",
     "random.shuffle(train_data)\n",
@@ -174,21 +174,21 @@
     "# Note: No EOS token is used in original codebase\n",
     "prompt_template = f\"{BOS_TOKEN} {B_INST} \\n{B_SYS}{SYS_PROMPT}{E_SYS}\\n\\n {{question}} {E_INST} {{answer}}\"\n",
     "\n",
+    "\n",
     "def make_pos_neg_pair(mwe_data: MWEData) -> tuple[str, str]:\n",
-    "    \"\"\" Creates a (positive, negative) pair for getting contrastive activations \"\"\"\n",
+    "    \"\"\"Creates a (positive, negative) pair for getting contrastive activations\"\"\"\n",
     "    pos = prompt_template.format(\n",
-    "        question = mwe_data['question'],\n",
-    "        answer = mwe_data['answer_matching_behavior']   \n",
+    "        question=mwe_data[\"question\"], answer=mwe_data[\"answer_matching_behavior\"]\n",
     "    )\n",
     "    neg = prompt_template.format(\n",
-    "        question = mwe_data['question'],\n",
-    "        answer = mwe_data['answer_not_matching_behavior']\n",
+    "        question=mwe_data[\"question\"], answer=mwe_data[\"answer_not_matching_behavior\"]\n",
     "    )\n",
     "    return pos, neg\n",
     "\n",
+    "\n",
     "def make_dataset(list_mwe_data: list[MWEData]) -> list[tuple[str, str]]:\n",
-    "    \"\"\" Creates a list of (positive, negative) pairs for getting contrastive activations \"\"\"\n",
-    "    return [make_pos_neg_pair(mwe_data) for mwe_data in list_mwe_data]\n"
+    "    \"\"\"Creates a list of (positive, negative) pairs for getting contrastive activations\"\"\"\n",
+    "    return [make_pos_neg_pair(mwe_data) for mwe_data in list_mwe_data]"
    ]
   },
   {
@@ -245,15 +245,17 @@
    "outputs": [],
    "source": [
     "import math\n",
+    "from collections.abc import Iterable\n",
+    "from dataclasses import dataclass\n",
+    "\n",
     "import torch\n",
     "from tqdm import tqdm\n",
-    "from transformers import PreTrainedTokenizerBase as Tokenizer\n",
     "from transformers import PreTrainedModel as Model\n",
-    "from dataclasses import dataclass\n",
-    "from typing import Iterable\n",
+    "from transformers import PreTrainedTokenizerBase as Tokenizer\n",
+    "\n",
     "\n",
     "def get_probabilities(logprobs: list[float]) -> list[float]:\n",
-    "    \"\"\" Converts log-probabilities to a normalized probability distribution \"\"\"\n",
+    "    \"\"\"Converts log-probabilities to a normalized probability distribution\"\"\"\n",
     "    min_logprob = min(logprobs)\n",
     "    # Shift the range to avoid underflow when exponentiating\n",
     "    logprobs = [logprob - min_logprob for logprob in logprobs]\n",
@@ -263,11 +265,13 @@
     "    probs = [prob / total for prob in probs]\n",
     "    return probs\n",
     "\n",
+    "\n",
     "@dataclass\n",
     "class TokenProb:\n",
     "    token_id: int\n",
     "    logprob: float\n",
     "    text: str\n",
+    "\n",
     "\n",
     "@dataclass\n",
     "class TextProbs:\n",
@@ -281,8 +285,13 @@
     "    def __repr__(self) -> str:\n",
     "        return f\"TextProbs({self.text}:{self.sum_logprobs:.2f})\"\n",
     "\n",
-    "def get_text_probs(input: str, model: Model, tokenizer: Tokenizer, ) -> TextProbs:\n",
-    "    \"\"\" Get the token-wise probabilities of a given input \"\"\"\n",
+    "\n",
+    "def get_text_probs(\n",
+    "    input: str,\n",
+    "    model: Model,\n",
+    "    tokenizer: Tokenizer,\n",
+    ") -> TextProbs:\n",
+    "    \"\"\"Get the token-wise probabilities of a given input\"\"\"\n",
     "    inputs = tokenizer(input, return_tensors=\"pt\")\n",
     "    outputs = model(**inputs, output_hidden_states=False, return_dict=True)\n",
     "    logprobs = torch.log_softmax(outputs.logits, dim=-1).detach().cpu()\n",
@@ -303,22 +312,24 @@
     "                )\n",
     "            )\n",
     "    return TextProbs(text=input, token_probs=text_logprobs)\n",
-    "    \n",
+    "\n",
     "\n",
     "def evaluate_model(\n",
-    "    model: Model, \n",
-    "    tokenizer: Tokenizer, \n",
+    "    model: Model,\n",
+    "    tokenizer: Tokenizer,\n",
     "    dataset: Iterable[tuple[str, str]],\n",
-    "    show_progress: bool = False\n",
+    "    show_progress: bool = False,\n",
     "):\n",
-    "    \"\"\" Evaluate model on dataset and return normalized probability of correct answer \"\"\"\n",
+    "    \"\"\"Evaluate model on dataset and return normalized probability of correct answer\"\"\"\n",
     "    total_pos_prob = 0.0\n",
-    "    for pos_prompt, neg_prompt in tqdm(dataset, disable=not show_progress, desc=\"Evaluating\"):\n",
+    "    for pos_prompt, neg_prompt in tqdm(\n",
+    "        dataset, disable=not show_progress, desc=\"Evaluating\"\n",
+    "    ):\n",
     "        pos: TextProbs = get_text_probs(pos_prompt, model, tokenizer)\n",
     "        neg: TextProbs = get_text_probs(neg_prompt, model, tokenizer)\n",
-    "        # NOTE: We compare logprobs of the full (prompt + response).  \n",
-    "        # This is equivalent to comparing response log-probs only.  \n",
-    "        # Because the prompts are the same for both positive and negative, \n",
+    "        # NOTE: We compare logprobs of the full (prompt + response).\n",
+    "        # This is equivalent to comparing response log-probs only.\n",
+    "        # Because the prompts are the same for both positive and negative,\n",
     "        # the prompt log-probs factor out as an additive constant in the total log-probs.\n",
     "        # and so the relative difference in log-probs is unchanged.\n",
     "        pos_prob, _ = get_probabilities([pos.sum_logprobs, neg.sum_logprobs])\n",
@@ -357,20 +368,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from steering_vectors import train_steering_vector, SteeringVector\n",
+    "from steering_vectors import SteeringVector, train_steering_vector\n",
     "\n",
     "steering_vector: SteeringVector = train_steering_vector(\n",
-    "    model, \n",
+    "    model,\n",
     "    tokenizer,\n",
     "    train_dataset,\n",
     "    move_to_cpu=True,\n",
     "    # NOTE: You can specify a list[int] of desired layer indices\n",
     "    # If layers is None, then all layers are used\n",
     "    # Here, layer 15 is the layer where sycophancy steering worked best in the CAA paper\n",
-    "    # for both Llama-2-7b-chat and Llama-2-13b-chat. \n",
-    "    layers = [15], \n",
+    "    # for both Llama-2-7b-chat and Llama-2-13b-chat.\n",
+    "    layers=[15],\n",
     "    # NOTE: The second last token corresponds to the A/B position\n",
-    "    # which is where we believe the model makes its decision \n",
+    "    # which is where we believe the model makes its decision\n",
     "    read_token_index=-2,\n",
     "    show_progress=True,\n",
     ")"
@@ -411,9 +422,11 @@
    "source": [
     "from torch.nn.functional import cosine_similarity\n",
     "\n",
-    "original_steering_vector = torch.load(f'vec_layer_15_Llama-2-{model_size}-chat-hf.pt')\n",
+    "original_steering_vector = torch.load(f\"vec_layer_15_Llama-2-{model_size}-chat-hf.pt\")\n",
     "our_steering_vector = steering_vector.layer_activations[15]\n",
-    "print(f\"Cosine similarity: {cosine_similarity(original_steering_vector, our_steering_vector, dim=0):.3f}\")\n"
+    "print(\n",
+    "    f\"Cosine similarity: {cosine_similarity(original_steering_vector, our_steering_vector, dim=0):.3f}\"\n",
+    ")"
    ]
   },
   {
